# rvx

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  flake.nix  install.ps1  install.sh
.github/workflows/: check.yml  integration.yml  release.yaml  release.yml
docs/superpowers/plans/: 2026-03-10-rvx-implementation.md
docs/superpowers/specs/: 2026-03-10-rvx-design.md
src/: cache.rs  cli.rs  download.rs  error.rs  exec.rs  lib.rs  main.rs  registry.rs  resolve.rs  target.rs
tests/: cache_test.rs  e2e_test.rs  registry_test.rs
