[package]
name = "rvx"
version = "0.1.0"
edition = "2021"
description = "uvx for Rust — download and run pre-built crate binaries"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"], default-features = false }
flate2 = "1"
tar = "0.4"
xz2 = "0.1"
zstd = "0.13"
zip = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
dirs = "6"
tempfile = "3"
thiserror = "2"
fs2 = "0.4"
